# IKore-Engine

./: .asoundrc  .gitignore  AI_COMPONENT_IMPLEMENTATION.md  CMakeLists.txt  ENTITY_DEBUG_IMPLEMENTATION.md  ENTITY_SYSTEM_IMPLEMENTATION.md  EVENT_SYSTEM_IMPLEMENTATION.md  EXPANSION_IDEAS.md  FRUSTUM_CULLING_IMPLEMENTATION.md  GPU_PARTICLE_SYSTEM_IMPLEMENTATION.md  INPUT_COMPONENT_IMPLEMENTATION_COMPLETE.md  OPENAL_FIX.md  PARTICLE_COMPONENT_IMPLEMENTATION.md  PHONE_GAME_CONCEPT.md  PHONE_GAME_DESIGN.md  README.md  SERIALIZATION_IMPLEMENTATION.md  SHADOW_MAPPING_IMPLEMENTATION.md  TRANSFORM_COMPONENT_IMPLEMENTATION.md  build_and_test.sh  commit_openal_fix.sh  complete_sound_fixes.sh  demo_serialization.sh  fix_action_types.sh  fix_alGetError.sh  fix_alGetError_final.sh  fix_al_defines.sh  fix_log_level.sh  fix_log_macro.sh  fix_log_order.sh  fix_logger.sh  fix_openal_declarations.sh  fix_sound_component.sh  fix_sound_system.sh  fix_sound_system_error.sh  model_test.cpp  push_openal_fix.sh  quick_debug_validation.sh  quick_validation.sh  simple_component_test.cpp  (+43 more)
.github/: debug-sources.sh
.github/workflows/: analysis.yml  ci.yml  docs.yml  release.yml
assets/levels/: sample_dungeon.level.json
assets/scripts/: hot_reload.lua  sample.lua
build_ci/: Makefile  scene_graph_demo  simple_physics_test  simple_transform_test  test_ecs_benchmark  test_material_component  test_mesh_component  test_mesh_component_geometry  test_mesh_component_minimal  test_openal_3d_audio  test_physics_component  test_physics_simple  test_scene_graph
build_test/: Makefile  test_event_system_simple  test_network_component  test_openal_3d_audio  test_particle_component  test_sound_component
docs/: ANIMATION_COMPONENT_IMPLEMENTATION.md  DOODLE_LEVEL_FORMAT.md  ECS_BENCHMARK.md  RENDERING_MODERNIZATION.md  SCENE_GRAPH_COMPLETION_SUMMARY.md  SCENE_GRAPH_IMPLEMENTATION.md  SCENE_GRAPH_SYSTEM_IMPLEMENTATION.md  SCRIPTING.md  SKYBOX_IMPLEMENTATION.md
samples/: README.md  benchmark_export_demo.cpp  vertical_slice_demo.cpp
src/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraController.cpp  CameraController.h  CascadedShadowMap.cpp  CascadedShadowMap.h  ControllableEntities.cpp  ControllableEntities.h  DeltaTimeDemo.cpp  DeltaTimeDemo.h  EnhancedCameraEntity.cpp  EnhancedCameraEntity.h  Entity.h  EntityDebugSystem.cpp  EntityDebugSystem.h  EntityRegistration.h  EntityTypes.cpp  EntityTypes.h  Entity_broken.cpp  Frustum.cpp  Frustum.h  InputComponent.cpp  InputComponent.h  Light.h  Logger.cpp  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  PostProcessor.cpp  PostProcessor.h  SceneGraphSystem.cpp  SceneGraphSystem.h  SceneManager.cpp  SceneManager.h  Serialization.cpp  Serialization.h  Shader.cpp  (+19 more)
src/ai/: BehaviorTree.h  Brain.h  LlmBrain.h  Npc.h  QuestGen.h  SceneAuthor.h
src/audio/: AmbientSoundZone.cpp  AmbientSoundZone.h  AudioDecode.h  AudioDecodeCompressed.cpp  AudioDecodeCompressed.h  AudioStreaming.h  AudioSystem3D.cpp  AudioSystem3D.h  OpenALAudioEngine.cpp  OpenALAudioEngine.h
src/core/: AISystem.cpp  AISystem.h  AnimationLoader.cpp  AnimationLoader.h  Benchmark.h  Component.cpp  Component.h  Components.h  DebugConsole.h  ECSBenchmark.cpp  ECSBenchmark.h  Entity.cpp  Entity.h  EntityDebugSystem.cpp  EntityDebugSystem.h  EntityPool.cpp  EntityPool.h  EntityRegistration.h  EntityTypes.cpp  EntityTypes.h  EventSystem.cpp  EventSystem.h  FileWatcher.h  InputMap.h  LogSystem.h  Logger.cpp  Logger.h  NetworkSystem.cpp  NetworkSystem.h  PerfStats.h  PerformanceOverlay.cpp  PerformanceOverlay.h  Picking.h  PooledEntityManager.cpp  PooledEntityManager.h  Settings.h  SoundSystem.cpp  SoundSystem.h  Transform.cpp  Transform.h  (+2 more)
src/cv/: Image.h  Rectify.h  Robust.h  Symbols.h  Topology.h  Vectorize.h
src/demos/: model_test.cpp  scene_graph_demo.cpp  texture_test.cpp
src/doodle/: Doodle.h
src/game/: DoodleScene.h  DungeonGame.h  Leaderboard.h  LevelBrowser.h  LevelCatalog.h  LevelFormat.h  LevelReview.h  LevelShare.h  TourCamera.h  VerticalSlice.h
src/ml/: GlyphNet.h  SymbolRecognizer.h
src/mobile/: AppShell.h
src/net/: Desync.h  Rollback.h
src/render/: DebugFont8x8.h  DebugTextGeometry.h  FrameGraph.h  Ibl.cpp  Ibl.h  IblBrdf.h  NormalMapping.h  ParticleEmit.h  ParticleSim.h  PbrBrdf.h  PbrMaterial.h  RenderPassGraph.h  ShadowCascadeBuild.h  ShadowCascades.h  ShadowFiltering.h  ShadowSkinning.h  Skinning.h  SsaoKernel.h  ToneMapping.h
src/scene/: SceneGraphSystem.cpp  SceneGraphSystem.h  SceneManager.cpp  SceneManager.h
src/scripting/: ScriptSystem.cpp  ScriptSystem.h
src/shaders/: basic.frag  basic.vert  bloom_blur.frag  bloom_bright.frag  bloom_combine.frag  brdf_lut.frag  brdf_lut.vert  copy.frag  cubemap.vert  fxaa.frag  irradiance_convolution.frag  particle.frag  particle.vert  particle_emit.compute  particle_ssbo.vert  particle_update.compute  pbr.frag  pbr.vert  phong.frag  phong.vert  phong_shadows.frag  phong_shadows.vert  prefilter.frag  shadow_depth.frag  shadow_point.frag  shadow_point.geom  skinned_phong.vert  skinned_shadow_depth.vert  skinned_shadow_point.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  ssao_combine.frag  (+2 more)
tests/: data_audio_vectors.h  test_ai_brain.cpp  test_animation_component.cpp  test_app_shell.cpp  test_archetype_ecs.cpp  test_audio_compressed.cpp  test_audio_decode.cpp  test_audio_streaming.cpp  test_benchmark.cpp  test_crowd.cpp  test_cv_robust.cpp  test_data_export.cpp  test_debug_console.cpp  test_debug_text.cpp  test_desync.cpp  test_determinism.cpp  test_doodle_library.cpp  test_doodle_scene.cpp  test_dungeon_game.cpp  test_ecs_benchmark.cpp  test_ecs_benchmark.sh  test_ecs_query.cpp  test_ecs_systems.cpp  test_entity_inspector.cpp  test_entity_pool.cpp  test_event_system.cpp  test_event_system.sh  test_file_watcher.cpp  test_frame_graph.cpp  test_geojson_importer.cpp  test_glm_include.sh  test_glyph_net.cpp  test_hud_framework.cpp  test_ibl_brdf.cpp  test_input_map.cpp  test_integrated_systems.sh  test_leaderboard.cpp  test_level_catalog.cpp  test_level_format.cpp  test_level_review.cpp  (+52 more)
(+60 files in other folders)
